namespace MediaTransCoder.Backend {
    internal class AudioConverter : IDisposable {
        public void Dispose() {
            throw new NotImplementedException();
        }
    }
}
