namespace MediaTransCoder.Backend {
    internal class ImageConverter : IDisposable {
        public void Dispose() {
            throw new NotImplementedException();
        }
    }
}
