namespace MediaTransCoder.Backend {
    internal class VideoConverter : IDisposable {
        
        public void Dispose() {
            throw new NotImplementedException();
        }
    }
}
